--- a/styles/cats.css
+++ b/styles/cats.css
@@ -13,7 +13,7 @@ body {
     border-radius: 10px;
     box-shadow: 5px 5px 24px 0px rgba(0,0,0,0.13);
     font-weight: 300;
-    margin: 0 auto 3rem ;
+    margin: 0 auto;
     padding: 2rem;
     transform: translateY(10%);
     width: 70%;
@@ -33,7 +33,7 @@ body {
 
 /* Cats */
 .cats {
-    margin: 0 auto;
+    margin: 8rem auto;
     width: 90%;
 }
 
